[project]
name = "road-to-the-sea-scraper"
version = "0.1.0"
description = "Scrape the Road to the Sea blog into one page"
authors = [
    {name = "Jesse McGraw", email ="jlmcgraw@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]

requires-python = ">=3.10, ~=3.13"
dependencies = ["beautifulsoup4", "requests", "tenacity"]



[project.urls]
homepage = "https://github.com/jlmcgraw/road-to-the-sea-scraper"
source = "https://github.com/jlmcgraw/road-to-the-sea-scraper"
changelog = "https://github.com/jlmcgraw/road-to-the-sea-scraper/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "basedpyright",
    "ipython",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mypy",
    "pyclean",
    "pygments",
    "pytest",
    "pytest-cov",
    "pytest-pretty",
    "pytest-random-order",
    "ruff",
    "typos",
    "types-requests"
]


[tool.uv]
package = true


[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=src/road_to_the_sea_scraper",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src/road_to_the_sea_scraper", "tests"]


[tool.ruff.format]
docstring-code-format = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-line-length = 100

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # whitespace and newlines
    "I", # isort
    "UP", # modernize
    "ANN", # flake8 type annotations
    "S", # flake8 bandit
    "B", # flake8 bugbear
    "C4", # flake8 comprehensions
    "COM", # flake8 commas
    "T20", # flake8 print
    "SIM", # flake8 simplify
    "ARG", # flake8 unused arguments
    "DTZ", # flake8 datetimes
    "Q", # flake8 quotes
    "TCH", # flake8 typecheck
    "D", # pydocstyle
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
ignore = [
    "D203", "D205", "D213", "D215", "D400", "D401", "D404", "D406",
    "D407", "D408", "D409", "D413",
    "COM812",
    "T201",
    "I001"
]

[tool.ruff.lint.per-file-ignores]
"test*" = ["D", "ANN", "S"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
pretty = true
files = ["src/road_to_the_sea_scraper", "tests"]
check_untyped_defs = true

python_version = "3.13"
strict = true

disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
#module = ["tests.*"]
files = ["tests/**/*.py", "tests/*.py"]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
no_implicit_optional = false
warn_return_any = false


[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
include = ["src"]     # analyze only src
exclude = [
  "tests",
  "**/tests",
  "tests/**"
]

[tool.typos.default]
extend-ignore-identifiers-re = []


[tool.hatch.build.targets.wheel]
packages = ["src/road_to_the_sea_scraper"]

[tool.coverage.run]
source = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
